<resources>
    <string name="app_name">Vestibio</string>
    <string name="app_name_short">Vestibio</string>

    <string name="title_section1">Metronome</string>
    <string name="title_section2">Sessions</string>
    <string name="title_section3">Graphs</string>

    <string name="bottom_nav_metronome">Metronome</string>
    <string name="nav_exercises">Home</string>
    <string name="bottom_nav_log">Sessions</string>
    <string name="bottom_nav_graphs">Graphs</string>


    <string name="action_apply">Apply</string>
    <string name="action_remove">Remove</string>


    <string name="addsession">Session Details</string>


    <string name="start">Start</string>
    <string name="backup">Backup to Google Drive</string>
    <string name="processing">Processing</string>
    <string name="please_wait">Please wait...</string>
    <string name="account">Account</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="backup_success">Awesome! Your data is now backed up!</string>
    <string name="backup_failure">Oops, couldn\'t backup. Please try again.</string>
    <string name="restore_success">Your data has been restored!</string>
    <string name="restore_failure">Oops, couldn\'t restore. Please check internet connection and try again.</string>
    <string name="nothing_backed_up">"Nothing backed up yet"</string>
    <string name="date_backed_up">"Last backup: "</string>

    <string name="action_failure">Oops, couldn\'t perform that action. Please try again.</string>
    <string name="Log">Log Session</string>
    <string name="vestibular_session">Vestibular Session</string>
    <string name="title_session">Session Title</string>
    <string name="notes_hint">(Optional) Session Notes...</string>
    <string name="stop">Pause</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="snippet">Snippet</string>
    <string name="snippet_number">Snippet %d</string>
    <string name="duration_toast_exceeded">Pick a duration between 10 s and 240 s</string>
    <string name="session_completed">Session completed, good work!</string>
    <string name="rest_toast_exceeded">Pick rest duration between 1 s and 240 s</string>
    <string name="sets_toast_exceeded">Pick # of sets between 1 and 20</string>
    <string name="bpm">BPM</string>
    <string name="ex_duration">Reps</string>
    <string name="ex_duration_sec">(seconds)</string>
    <string name="empty_state">No sessions logged yet</string>
    <string name="empty_state_instruction">Complete a session in Metronome to start seeing them here</string>
    <string name="optional">Optional fields</string>
    <string name="total_session">Total session time: </string>
    <string name="ex_number_sets">Sets</string>
    <string name="rest_duration">Rest</string>
    <string name="timesignature">time signature</string>
    <string name="dash" translatable="false">/</string>
    <string name="volume">volume</string>
    <string name="one" translatable="false">1</string>
    <string name="song">Song</string>
    <string name="session">Session</string>
    <string name="beat">Beat</string>
    <string name="beat_per_bar">Beats per bar</string>
    <string name="bars_count">Bars count</string>
    <string name="snippets">%d snippets</string>
    <string name="empty_field">Empty field</string>
    <string name="nav_menu_metronome">Metronome</string>
    <string name="nav_menu_donate">Donate</string>
    <string name="nav_menu_disclaimer">Disclaimer &amp; Privacy</string>
    <string name="nav_menu_resources"> Vestibular Resources</string>
    <string name="nav_menu_about">About Vestibio</string>
    <string name="nav_menu_rate">Rate us</string>
    <string name="nav_menu_backup">Backup &amp; Restore Data</string>

    <string name="set_countdown">Reps countdown:</string>
    <string name="rest_countdown">Rest countdown:</string>


    <string name="navigation_drawer_open">Nav Drawer Opened</string>
    <string name="navigation_drawer_closed">Nav Drawer Closed</string>
    <string name="graphBpmTitle_AllSessions">BPM/Session - all sessions</string>
    <string name="graphDizzyTitle_AllSessions">Dizzy/Session - all sessions</string>
    <string name="graphBpmTitle_40Sessions">BPM/Session - last 40 sessions</string>
    <string name="graphDizzyTitle_40Sessions">Dizzy/Session - last 40 sessions</string>
    <string name="graph_sessionNumber">Session #</string>
    <string name="graph_dizzyLevel">Dizziness Level</string>
    <string name="graph_Bpm">BPM</string>


    <string name="title">Title</string>
    <string name="notes">Session Notes</string>
    <string name="confirm_delete">Confirm session remove</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logAccept">Add Session</string>
    <string name="continue_button">Continue</string>
    <string name="finish_button">Finish</string>
    <string name="logCancel">Cancel</string>
    <string name="dizzyness_level_input">Rate dizziness (scale 1 -10): </string>
    <string name="enter_title">Enter track title</string>

    <string name="bpm_tag">BPM</string>
    <string name="duration_tag">  Duration: </string>
    <string name="date_tag">  Date: </string>
    <string name="dizziness_tag">  Dizziness Level: </string>
    <string name="graph_nodata">Add sessions to see data</string>

    <string name="dizziness_hint">  Dizzy Level (1-10) </string>
    <string name="na">  N/A </string>
    <string name="help">  Help </string>

    <string name="song_will_start">Track will start in... </string>
    <string name="session_tab">SessionTab </string>

    <string name="service_started">Metronome service started</string>
    <string name="service_stopped">Metronome service stopped</string>
    <string name="disclaimer_link">Read Vestibio\'s Disclaimer and Terms</string>

    <string name="privacy_policy_link">Read Vestibio\'s Privacy Policy </string>
    <string name="resources_link">Vestibular Disorder Resources page</string>
    <string name="privacy_policy_url">http://www.vestibio.com/privacy-policy-vestibio-app/</string>
    <string name="resources_url">http://www.vestibio.com/resources/</string>
    <string name="about_url">http://www.vestibio.com/about-us/</string>
    <string name="privacy_disclaimer_url">http://www.vestibio.com/disclaimer-and-terms/</string>
    <string name="note">The links below will direct you to Vestibio\'s official website - Internet connection is needed</string>
    <string name="read_more_about">Read more about Vestibio\'s story including our Design and Pricing</string>
    <string name="disclaimer"> DISCLAIMER AND TERMS \n \n

The information provided by Vestibio (“we”, “us”, or “our”) on www.vestibio.com (the “Site”) [and our mobile application] is for general informational purposes only. All information on the Site [and our mobile application] is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability or completeness of any information on the Site [or our mobile application].

Under no circumstance shall we have any liability to you for any loss or damage of any kind incurred as a result of the use of the site [or our mobile application] or reliance on any information provided on the site [and our mobile application]. Your use of the site [and our mobile application] and your reliance on any information on the site [and our mobile application] is solely at your own risk.\n \n

HEALTH DISCLAIMER\n\n

The Site cannot and does not contain heath advice. The health information is provided for general informational and educational purposes only, and is not a substitute for professional health advice.

Accordingly, before taking any actions based upon such information, we encourage you to consult with the appropriate medical and healthcare professionals. We do not provide any kind of health advice. The use or reliance of any information contained on this site [or our mobile application] is solely at your own risk.</string>



    <string name="about"> Want to know more? Read our story on Vestibio\'s official site</string>
    <string name="version">Version </string>
    <string name="website_url">http://www.vestibio.com/</string>
    <string name="website">www.vestibio.com</string>

    <string-array name="dizzyness">
        <item>N/A</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="donation_google_catalog_values">
        <item>1 Euro</item>
        <item>2 Euros</item>
        <item>3 Euros</item>
        <item>5 Euros</item>
        <item>8 Euros</item>
        <item>13 Euros</item>
    </string-array>
</resources>

