<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single"
       >
        <item
            android:id="@+id/nav_metronome"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_exercises" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_backup_black_24dp"
            android:title="@string/nav_menu_backup" />
        <!--<item-->
            <!--android:id="@+id/nav_donate"-->

            <!--android:title="@string/nav_menu_donate" />-->
        <!--<item-->
            <!--android:id="@+id/nav_rate"-->

            <!--android:title="@string/nav_menu_rate" />-->

        <item
            android:id="@+id/nav_about"

            android:title="@string/nav_menu_about"
            android:icon="@drawable/ic_info_black_24dp"/>
        <item
            android:id="@+id/nav_disclaimer"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/nav_menu_disclaimer" />




    </group>
</menu>
