<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeGradientLighter_background"
    >
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/pure_white"
        tools:context="com.amagesoftware.vestibio.fragments.DisclaimerFragment">
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:backgroundTint="@color/pure_white"
            >

            <TextView
                android:id="@+id/resources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/grey_600"
                android:textSize="@dimen/text_size_20"
                android:text="@string/note"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/resourceslink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/resources_link"
                android:textColor="@color/grey_600"
                android:textSize="@dimen/text_size_20"
                />

            <TextView
                android:id="@+id/story"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about"
                android:layout_margin="10dp"
                android:textColor="@color/grey_600"
                android:textSize="@dimen/text_size_20"/>


            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/version"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/pure_white"
                android:textColor="@color/grey_600"
                android:textSize="14dp"/>
            <TextView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about"
                android:layout_gravity="center"

                android:gravity="center"
                android:textColor="@color/grey_600"
                android:textSize="@dimen/text_size_title"/>





        </LinearLayout>

    <!-- TODO: Update blank fragment layout -->

    </FrameLayout>


</ScrollView>