<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:animateLayoutChanges="true"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llText"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <LinearLayout
            android:id="@+id/llBPM"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnMinus"
                style="@style/MetronomeButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="24sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvBPM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bpm"
                    android:textColor="@color/accent"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tvBPMHint"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bpm"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <Button
                android:id="@+id/btnPlus"
                style="@style/MetronomeButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/llTimeSignature"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinnerBeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/primary"
                    android:text="@string/dash"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                <Spinner
                    android:id="@+id/spinnerNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv2"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_text"
                android:text="@string/timesignature"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <SeekBar
            android:id="@+id/seekbarBPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/base_margin_eight"
            android:max="168"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnStartStop"
        style="@style/MetronomeButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="32dp" />


</LinearLayout>