<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llSongPlayback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_trans_80"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/countdownLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/text_size_large"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/song_will_start"
            android:textColor="@color/theme50" />

        <TextView
            android:id="@+id/countTextView"
            android:textSize="@dimen/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playbackLinearLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:theme="@style/WhiteEditTextStyle">

                <EditText
                    android:id="@+id/edtSnippet"
                    style="@style/WhiteEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:hint="@string/snippet"
                    android:inputType="none"
                    android:textSize="@dimen/text_size_large" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:theme="@style/WhiteEditTextStyle">

                <EditText
                    android:id="@+id/edtBarCount"
                    style="@style/WhiteEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:hint="@string/bars_count"
                    android:inputType="none"
                    android:textSize="@dimen/text_size_large" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:theme="@style/WhiteEditTextStyle">

            <EditText
                android:id="@+id/edtBPM"
                style="@style/WhiteEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:hint="@string/bpm"
                android:inputType="none"
                android:textSize="@dimen/text_size_gigantic" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin_big"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:theme="@style/WhiteEditTextStyle">

                <EditText
                    android:id="@+id/edtCurrentBeat"
                    style="@style/WhiteEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:hint="@string/beat"
                    android:inputType="none"
                    android:textSize="@dimen/text_size_large" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:theme="@style/WhiteEditTextStyle">

                <EditText
                    android:id="@+id/edtCurrentBar"
                    style="@style/WhiteEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:hint="@string/beat_per_bar"
                    android:inputType="none"
                    android:textSize="@dimen/text_size_large" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnStopCurrent"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_large"
            android:background="@drawable/button_background"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/stop" />
    </LinearLayout>

</LinearLayout>